--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     <header class="hero">
         <div class="container">
             <div class="hero-header">
-                <a href="#"><img class="logo" src="img/logo2.svg" alt="logo"></a>
+                <a href="#"><img class="logo" src="img/logo-new.svg" alt="logo"></a>
                 <div class="social-links">
                     <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                             alt="github"></a>
                     <a href="https://vk.com/crew_dev" class="social-link"><img src="img/social/vk.svg" alt="vk"></a>
-                    <a href="#" class="social-link"><img src="img/social/twitter.svg" alt="twitter"></a>
-                    <a href="#" class="social-link"><img src="img/social/instagram.svg" alt="instagram"></a>
+                    <a href="#" class="social-link"><img src="img/social/telegram.svg" alt="telegram"></a>
                 </div>
                 <!-- /.social-links -->
             </div>
