--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 
     <section class="section projects">
         <div class="container">
-            <h2 class="section-title" id="projects">Последние проекты</h2>
+            <h2 class="section-title" id="projects" aos-init aos-animate" data-aos="fade-left" data-aos-delay="250">Последние проекты</h2>
             <div class="swiper-container projects-slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide projects-slide">
+                    <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
                         <img src="img/project-img.png" alt="Сайт строительной компании “Строй Дом”" class="project-image">
                         <div class="project-text">
                             <h3 class="project-title">Сайт строительной компании “Строй Дом”</h3>
