--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
-                        <img src="img/project-img.png" alt="Сайт строительной компании “Строй Дом”" class="project-image">
+                        <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
-                            <h3 class="project-title">Сайт строительной компании “Строй Дом”</h3>
+                            <a class ="project-link" href="stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
                             <div class="project-time">
-                                <img src="img/time-icon.svg" alt="срок" class="project-icon">
+                                <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Сроки</h4>
                                     <p class="project-paragraph">12 рабочих дней</p>
@@ -119,7 +119,7 @@
                             </div>
                             <!-- /.project-time -->
                             <div class="project-cost">
-                                <img src="img/cost-icon.svg" alt="Стоимость" class="project-icon">
+                                <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Стоимость</h4>
                                     <p class="project-paragraph">12 000 рублей </p>
@@ -127,7 +127,7 @@
                             </div>
                             <!-- /.project-cost -->
                             <div class="project-feedback">
-                                <img src="img/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
+                                <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
                                     <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мненужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
@@ -138,12 +138,11 @@
                     </div>
                     
                     <div class="swiper-slide projects-slide">
-                        <img src="img/project-spcex.png" alt="Промосайт компании “Space X”"
-                            class="project-image">
+                       <a href="https://crew-dev.github.io/spacex/"><img src="img/project-spacex.png" alt="Промосайт компании “Space X”" class="project-image"></a> 
                         <div class="project-text">
-                            <h3 class="project-title">Промосайт компании “Space X”</h3>
+                            <a class = "project-link" href="https://crew-dev.github.io/spacex/"><h3 class="project-title">Промосайт компании “Space X”</h3></a> 
                             <div class="project-time">
-                                <img src="img/time-icon.svg" alt="срок" class="project-icon">
+                                <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Сроки</h4>
                                     <p class="project-paragraph">4 рабочих дня</p>
@@ -151,7 +150,7 @@
                             </div>
                             <!-- /.project-time -->
                             <div class="project-cost">
-                                <img src="img/cost-icon.svg" alt="Стоимость" class="project-icon">
+                                <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Стоимость</h4>
                                     <p class="project-paragraph">5 000 рублей </p>
@@ -159,7 +158,7 @@
                             </div>
                             <!-- /.project-cost -->
                             <div class="project-feedback">
-                                <img src="img/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
+                                <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
                                     <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мненужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
