--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
             <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="300">Свяжитесь со мной
             </h2>
             <div class="contacts-block">
-                <form action="#" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
+                <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
                     <h4 class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</h4>
-                    <input type="text" class="input input-name" placeholder="Ваше имя">
-                    <input type="text" class="input input-phone" placeholder="Ваш телефон">
-                    <button class="button form-button">Бесплатная консультация</button>
+                    <input type="text" name="name" class="input input-name" placeholder="Ваше имя">
+                    <input type="email" name="email" class="input input-email" placeholder="Ваша почта"></input>
+                    <button value="Send" class="button form-button">Бесплатная консультация</button>
                 </form>
                 <div class="contacts-text">
                     <div class="contacts-data" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
@@ -195,7 +195,7 @@
                         <!-- /.contacts-phone -->
                         <div class="contacts-mail">
                             <h4 class="contacts-title">Почта</h4>
-                            <a class="contacts-link" href="mailto:crew-dev@gmail.com">crew-dev@gmail.com</a>
+                            <a class="contacts-link" href="mailto:crew.dev.io@gmail.com">crew.dev.io@gmail.com</a>
                         </div>
                         <!-- /.contacts-mail -->
                         <div class="contacts-social">
