--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/aos.css">
     <title>Владислав Дедиков — Frontend разработчик</title>
 </head>
@@ -107,9 +108,9 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
-                        <a href="https://stroy-dom.github.io/"><img src="img/project-stroydom.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
+                        <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
-                            <a class ="project-link" href="https://stroy-dom.github.io/"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
+                            <a class ="project-link" href="stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
                             <div class="project-time">
                                 <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
@@ -183,7 +184,8 @@
                 <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
                     <h4 class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</h4>
                     <input type="text" name="name" class="input input-name" placeholder="Ваше имя">
-                    <input type="email" name="email" class="input input-email" placeholder="Ваша почта"></input>
+                    <input type="email" name="email" class="input input-email" placeholder="Ваша почта">
+                    <textarea type="text" name="textarea" class="input input-textarea" placeholder="Ваше сообщение"></textarea>
                     <button value="Send" class="button form-button">Бесплатная консультация</button>
                 </form>
                 <div class="contacts-text">
