--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
-                        <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.png" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
+                        <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.jpg" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
                             <a class ="project-link" href="stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
                             <div class="project-time">
@@ -139,7 +139,7 @@
                     </div>
                     
                     <div class="swiper-slide projects-slide">
-                       <a href="https://crew-dev.github.io/spacex/"><img src="img/project-spacex.png" alt="Промосайт компании “Space X”" class="project-image"></a> 
+                       <a href="https://crew-dev.github.io/spacex/"><img src="img/project-spacex.jpg" alt="Промосайт компании “Space X”" class="project-image"></a> 
                         <div class="project-text">
                             <a class = "project-link" href="https://crew-dev.github.io/spacex/"><h3 class="project-title">Промосайт компании “Space X”</h3></a> 
                             <div class="project-time">
@@ -212,8 +212,7 @@
                         <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                                 alt="github"></a>
                         <a href="https://vk.com/crew_dev" class="social-link"><img src="img/social/vk.svg" alt="vk"></a>
-                        <a href="#" class="social-link"><img src="img/social/twitter.svg" alt="twitter"></a>
-                        <a href="#" class="social-link"><img src="img/social/instagram.svg" alt="instagram"></a>
+                        <a href="https://telegram/crew-dev" class="social-link"><img src="img/social/telegram.svg" alt="telegram"></a>
                         <a class="social-polity" href="#">Политика конфиденциальности</a>
                     </div>
                     <!-- /.social-links -->
