--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
                         <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.jpg" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
-                            <a class ="project-link" href="stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
+                            <a class ="project-link" href="https://stroy-dom.github.io"><h3 class="project-title">Сайт строительной компании “Строй Дом”</h3></a> 
                             <div class="project-time">
                                 <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
