--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <header class="hero">
         <div class="container">
             <div class="hero-header">
-                <a href="#"><img class="logo" src="img/logo-new.svg" alt="logo"></a>
+                <a href="#"><img class="logo" src="img/logo-new 1.svg" alt="logo"></a>
                 <div class="social-links">
                     <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                             alt="github"></a>
                     <a href="https://vk.com/crew_dev" class="social-link"><img src="img/social/vk.svg" alt="vk"></a>
-                    <a href="#" class="social-link"><img src="img/social/telegram.svg" alt="telegram"></a>
+                    <a href="https://t.me/crew_dev" class="social-link"><img src="img/social/telegram.svg" alt="telegram"></a>
                 </div>
                 <!-- /.social-links -->
             </div>
             <div class="hero-content">
                 <div class="hero-text">
-                    <span class="hero-subtitle" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">Frontend
-                        разработчик</span>
+                    <span class="hero-subtitle" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">Junior Frontend
+                        developer</span>
                     <h1 class="hero-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="450">Владислав
                         Дедиков</h1>
                     <p class="hero-diskription" aos-init aos-animate" data-aos="fade-left" data-aos-delay="650">
@@ -106,7 +106,43 @@
             <div class="swiper-container projects-slider">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
-                    <!-- Slides -->
+										<!-- Slides -->			
+										<div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
+											<a href="https://crew-dev.github.io/ecology-project/"><img src="img/ecology-img.png"
+													alt="Сайт строительной компании “Строй Дом”" class="project-image"></a>
+											<div class="project-text">
+												<a class="project-link" href="https://crew-dev.github.io/ecology-project/">
+													<h3 class="project-title">"Экологическая катастрофа 21 века"</h3>
+												</a>
+												<div class="project-time">
+													<img src="img/project/time-icon.svg" alt="срок" class="project-icon">
+													<div class="project-description">
+														<h4 class="project-subtitle">Сроки</h4>
+														<p class="project-paragraph">В активной разработке</p>
+													</div>
+												</div>
+												<!-- /.project-time -->
+												<div class="project-cost">
+													<img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
+													<div class="project-description">
+														<h4 class="project-subtitle">Стоимость</h4>
+														<p class="project-paragraph">15 000 рублей</p>
+													</div>
+												</div>
+												<!-- /.project-cost -->
+												<div class="project-feedback">
+													<img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
+													<div class="project-description">
+														<h4 class="project-subtitle">Отзыв клиента</h4>
+														<p class="project-paragraph">Отзыв в данный момент отсутствует. Следите за разработкой этого проекта у
+															меня на странице в VK.
+														</p>
+													</div>
+												</div>
+												<!-- /.project-feedback -->
+											</div>
+										</div>
+
                     <div class="swiper-slide projects-slide" aos-init aos-animate" data-aos="fade-up" data-aos-delay="450">
                         <a href="https://stroy-dom.github.io"><img src="img/project-stroydom.jpg" alt="Сайт строительной компании “Строй Дом”" class="project-image"></a> 
                         <div class="project-text">
@@ -131,12 +167,12 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
-                                    <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мненужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
+                                    <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
                         </div>
-                    </div>
+										</div>
                     
                     <div class="swiper-slide projects-slide">
                        <a href="https://crew-dev.github.io/spacex/"><img src="img/project-spacex.jpg" alt="Промосайт компании “Space X”" class="project-image"></a> 
@@ -162,13 +198,14 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
-                                    <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мненужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
+                                    <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
                         </div>
                     </div>
-                </div>
+								</div>
+								
                 <!-- If we need pagination -->
                 <div class="projects-pagination"></div>
             </div>
@@ -212,7 +249,7 @@
                         <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                                 alt="github"></a>
                         <a href="https://vk.com/crew_dev" class="social-link"><img src="img/social/vk.svg" alt="vk"></a>
-                        <a href="https://telegram/crew-dev" class="social-link"><img src="img/social/telegram.svg" alt="telegram"></a>
+                        <a href="https://t.me/crew_dev" class="social-link"><img src="img/social/telegram.svg" alt="telegram"></a>
                         <a class="social-polity" href="#">Политика конфиденциальности</a>
                     </div>
                     <!-- /.social-links -->
