--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
 													<img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
 													<div class="project-description">
 														<h4 class="project-subtitle">Отзыв клиента</h4>
-														<p class="project-paragraph">Отзыв в данный момент отсутствует. Следите за разработкой этого проекта у
-															меня на странице в VK.
+														<p class="project-paragraph">Следите за разработкой этого проекта у меня на странице в VK.
 														</p>
 													</div>
 												</div>
