--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
 
     <footer class="section">
         <div class="container">
-            <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="300">Свяжитесь со мной
-            </h2>
+            <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="300">Свяжитесь со мной</h2>
             <div class="contacts-block">
                 <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
                     <h4 class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</h4>
