--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 													<img src="img/project/time-icon.svg" alt="срок" class="project-icon">
 													<div class="project-description">
 														<h4 class="project-subtitle">Сроки</h4>
-														<p class="project-paragraph">В активной разработке</p>
+														<p class="project-paragraph">20 рабочих дней</p>
 													</div>
 												</div>
 												<!-- /.project-time -->
@@ -126,7 +126,7 @@
 													<img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
 													<div class="project-description">
 														<h4 class="project-subtitle">Стоимость</h4>
-														<p class="project-paragraph">15 000 рублей</p>
+														<p class="project-paragraph">15 000</p>
 													</div>
 												</div>
 												<!-- /.project-cost -->
@@ -134,7 +134,7 @@
 													<img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
 													<div class="project-description">
 														<h4 class="project-subtitle">Отзыв клиента</h4>
-														<p class="project-paragraph">Следите за разработкой этого проекта у меня на странице в VK.
+														<p class="project-paragraph">Мне понравилось работать с Владиславом. Он всегда был на связи и предлагал различные варианты. Сделал всё довольно оперативно! Сайт получился красивый, информативный, и оптимизирован отлично, пользоваться удобно как с пк, так и с мобильных устройств.
 														</p>
 													</div>
 												</div>
@@ -158,7 +158,7 @@
                                 <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Стоимость</h4>
-                                    <p class="project-paragraph">12 000 рублей </p>
+                                    <p class="project-paragraph">25 000 рублей </p>
                                 </div>
                             </div>
                             <!-- /.project-cost -->
@@ -166,7 +166,7 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
-                                    <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
+                                    <p class="project-paragraph">Хочу вырозить благодарность хорошему специалисту Владиславу, за добросовестно проделанную работу, заказывал создание и оформление строительной сайта для нашей компании, Владислав оказалась доброжелателным человеком и хорошим специалистом, мой сайт был готов в короткие сроки, очень доволен спектром предоставленных работ.</p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
@@ -197,7 +197,7 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
-                                    <p class="project-paragraph">Мне понравилось работать с Владиславом, потому что он все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Владислав — тот редкий человек, у которого с документами все в порядке</p>
+                                    <p class="project-paragraph"></p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
