--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
                                     <h4 class="project-subtitle">Отзыв клиента</h4>
-                                    <p class="project-paragraph"></p>
+                                    <p class="project-paragraph">Спасибо Владиславу за работу. Сайт сделан качественно и в соответствии с нашими пожеланиями. Надеемся на долговременное сотрудничество.</p>
                                 </div>
                             </div>
                             <!-- /.project-feedback -->
