--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +15,7 @@
     <header class="hero">
         <div class="container">
             <div class="hero-header">
-                <a href="#"><img class="logo" src="img/logo-new 1.svg" alt="logo"></a>
+                <a href="#"><img class="logo" src="img/logo.svg" alt="logo"></a>
                 <div class="social-links">
                     <a href="https://github.com/crew-dev" class="social-link"><img src="img/social/github.svg"
                             alt="github"></a>
@@ -265,5 +264,4 @@
     <script src="js/scroll.js"></script>
 
 </body>
-
 </html>
