--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 												<div class="project-time">
 													<img src="img/project/time-icon.svg" alt="срок" class="project-icon">
 													<div class="project-description">
-														<h4 class="project-subtitle">Сроки</h4>
+														<p class="project-subtitle">Сроки</p>
 														<p class="project-paragraph">20 рабочих дней</p>
 													</div>
 												</div>
@@ -124,7 +124,7 @@
 												<div class="project-cost">
 													<img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
 													<div class="project-description">
-														<h4 class="project-subtitle">Стоимость</h4>
+														<p class="project-subtitle">Стоимость</p>
 														<p class="project-paragraph">15 000</p>
 													</div>
 												</div>
@@ -132,7 +132,7 @@
 												<div class="project-feedback">
 													<img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
 													<div class="project-description">
-														<h4 class="project-subtitle">Отзыв клиента</h4>
+														<p class="project-subtitle">Отзыв клиента</p>
 														<p class="project-paragraph">Мне понравилось работать с Владиславом. Он всегда был на связи и предлагал различные варианты. Сделал всё довольно оперативно! Сайт получился красивый, информативный, и оптимизирован отлично, пользоваться удобно как с пк, так и с мобильных устройств.
 														</p>
 													</div>
@@ -148,7 +148,7 @@
                             <div class="project-time">
                                 <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
-                                    <h4 class="project-subtitle">Сроки</h4>
+                                    <p class="project-subtitle">Сроки</p>
                                     <p class="project-paragraph">12 рабочих дней</p>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                             <div class="project-cost">
                                 <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
                                 <div class="project-description">
-                                    <h4 class="project-subtitle">Стоимость</h4>
+                                    <p class="project-subtitle">Стоимость</p>
                                     <p class="project-paragraph">25 000 рублей </p>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                             <div class="project-feedback">
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
-                                    <h4 class="project-subtitle">Отзыв клиента</h4>
+                                    <p class="project-subtitle">Отзыв клиента</p>
                                     <p class="project-paragraph">Хочу вырозить благодарность хорошему специалисту Владиславу, за добросовестно проделанную работу, заказывал создание и оформление строительной сайта для нашей компании, Владислав оказалась доброжелателным человеком и хорошим специалистом, мой сайт был готов в короткие сроки, очень доволен спектром предоставленных работ.</p>
                                 </div>
                             </div>
@@ -179,7 +179,7 @@
                             <div class="project-time">
                                 <img src="img/project/time-icon.svg" alt="срок" class="project-icon">
                                 <div class="project-description">
-                                    <h4 class="project-subtitle">Сроки</h4>
+                                    <p class="project-subtitle">Сроки</p>
                                     <p class="project-paragraph">4 рабочих дня</p>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                             <div class="project-cost">
                                 <img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
                                 <div class="project-description">
-                                    <h4 class="project-subtitle">Стоимость</h4>
+                                    <p class="project-subtitle">Стоимость</p>
                                     <p class="project-paragraph">5 000 рублей </p>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                             <div class="project-feedback">
                                 <img src="img/project/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                                 <div class="project-description">
-                                    <h4 class="project-subtitle">Отзыв клиента</h4>
+                                    <p class="project-subtitle">Отзыв клиента</p>
                                     <p class="project-paragraph">Спасибо Владиславу за работу. Сайт сделан качественно и в соответствии с нашими пожеланиями. Надеемся на долговременное сотрудничество.</p>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
             <h2 class="section-title" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">Свяжитесь со мной</h2>
             <div class="contacts-block">
                 <form action="https://formspree.io/myynabdp" method="POST" class="contacts-form" aos-init aos-animate" data-aos="fade-left" data-aos-delay="350">
-                    <h4 class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</h4>
+                    <p class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</p>
                     <input type="text" name="name" class="input input-name" placeholder="Ваше имя">
                     <input type="email" name="email" class="input input-email" placeholder="Ваша почта">
                     <textarea type="text" name="textarea" class="input input-textarea" placeholder="Ваше сообщение"></textarea>
@@ -225,17 +225,17 @@
                 <div class="contacts-text">
                     <div class="contacts-data" aos-init aos-animate" data-aos="fade-left" data-aos-delay="200">
                         <div class="contacts-phone">
-                            <h4 class="contacts-title">Телефон</h4>
+                            <p class="contacts-title">Телефон</p>
                             <a class="contacts-link" href="tel:+79267627517">+7 926 762 75 17</a>
                         </div>
                         <!-- /.contacts-phone -->
                         <div class="contacts-mail">
-                            <h4 class="contacts-title">Почта</h4>
+                            <p class="contacts-title">Почта</p>
                             <a class="contacts-link" href="mailto:crew.dev.io@gmail.com">crew.dev.io@gmail.com</a>
                         </div>
                         <!-- /.contacts-mail -->
                         <div class="contacts-social">
-                            <h4 class="contacts-title">Соцсети</h4>
+                            <p class="contacts-title">Соцсети</p>
                             <a href="#" class="contacts-link">t.me/crew-dev</a>
                             <a href="#" class="contacts-link">vk.me/crew_dev</a>
                             <a href="#" class="contacts-link">fb.me/crew_dev</a>
