--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 													<img src="img/project/cost-icon.svg" alt="Стоимость" class="project-icon">
 													<div class="project-description">
 														<p class="project-subtitle">Стоимость</p>
-														<p class="project-paragraph">15 000</p>
+														<p class="project-paragraph">15 00 рублей</p>
 													</div>
 												</div>
 												<!-- /.project-cost -->
